Thu Feb 15 20:04:01 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_stdlib.cpp (mkstemp_emulation):

          Include process and thread ID in random number generator seed
          value.  Addresses problems where the same seed value would end
          up being used for different processes and/or threads, resulting
          in identical filenames being generated.

	  Addressed potential race condition on platforms that do not
          inline the value of ACE_Numeric_Limits<>::max().

Thu Feb 15 17:53:53 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * THANKS: Check-in rules 101: Check-in files that you have
          modified.  Don't ever forget this basic rule.

Thu Feb 15 13:50:58 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.h:
        * ace/Connector.h:
        * ace/DEV_IO.h:
        * ace/FIFO_Recv.h:
        * ace/FIFO_Send.h:
        * ace/FIFO_Send_Msg.h:
        * ace/FILE_IO.h:
        * ace/INET_Addr.h:
        * ace/Local_Memory_Pool.h:
        * ace/Malloc_Base.h:
        * ace/MEM_IO.h:
        * ace/Mem_Map.h:
        * ace/MEM_SAP.h:
        * ace/MEM_Stream.h:
        * ace/Message_Block.h:
        * ace/MMAP_Memory_Pool.h:
        * ace/OS_NS_unistd.h:
        * ace/Pipe.h:
        * ace/Process_Manager.h:
        * ace/QoS/SOCK_Dgram_Mcast_QoS.h:
        * ace/Service_Types.h:
        * ace/Shared_Memory_Pool.h:
        * ace/SOCK_Dgram.h:
        * ace/SOCK_Dgram_Mcast.h:
        * ace/SOCK_IO.h:
        * ace/SOCK_SEQPACK_Association.h:
        * ace/SPIPE_Stream.h:
        * ace/Stream.h:
        * ace/Task.h:
        * ace/Thread.h:
        * ace/Thread_Manager.h:
        * ace/UPIPE_Stream.h:
          Doxygen improvements

Thu Feb 15 13:38:58 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ATM_Connector.h:
        * ace/DEV_Connector.h:
        * ace/DEV_IO.h:
        * ace/Dev_Poll_Reactor.h:
        * ace/FILE_Connector.h: